--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
+<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>About | Xiaoying Wen</title>
+  <title>Portfolio | Xiaoying Wen</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -36,23 +36,36 @@
   </div> 
 
   <div class="panel-body">
-    <div class="container">
+   <div class="container">
     <div class="row">
      <div id="main-container">  
-      <div class="col-xs-12 col-md-8">
+      <div class="col-xs-12 col-sm-8">
         <section class="main-section">
-          <h1>About Me</h1>
-
-          <img src="assets/images/xyw-we.jpg" class="auth-image" alt="Xiaoying Wen">
-
-          <p>Xiaoying Wen has been working as a middleware developer for many years.  After been promoted to manage the IT development team, she realized though spending much less time on coding she needs to have a more broader knowledge and keep on top of cutting-edge technology.  So here she is, a student of Rutgers Coding Bootcamp class.</p>
-
-          <p>When she isn’t coding, she loves to explore nature, work in her garden (gardenia being one of her favorite flowers), and travel with families.</p>
-
+        <h1>Portfolio</h1>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+          <h3>Hangman</h3>
+        </div>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+          <h3>RPG Game</h3>
+        </div>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+          <h3>Trivia Game</h3>
+        </div>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+          <h3>Rutgers Info Widget</h3>
+        </div>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+          <h3>Rock Paper Scissors</h3>
+        </div>
         </section>
+        </div>
       </div>
-      </div>
-      <div class="col-xs-12 col-md-4" class="float-lg-right">
+      <div class="col-xs-12 col-sm-4">
         <section class="sidebar">
           <div id="connect">
             <h2>Connect with Me</h2>
