--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta property="og:url"           content="https://xiaoyingwen.github.io" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="Xiaoying Wen" />
+  <meta property="og:description"   content="Xiaoying's Github site" />
+  <meta property="og:image"         content="https://xiaoyingwen.github.io/assets/images/xyw-we.jpg" />
+  <meta property="og:image:width"   content="100" />
+  <meta property="og:image:height"  content="80" />
   <title>About | Xiaoying Wen</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
